# tor-war

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: ABSTRACT.md  THEORY.md
packaging/: build_deb.sh
packaging/debian/: control
packaging/homebrew/: nipe.rb
src/: config.rs  engine.rs  error.rs  installer.rs  main.rs  monitor.rs  status.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
tests/: verify_nipe.sh
tests/docker/: Dockerfile.kali
