[package]
name = "nipe"
version = "1.0.0"
edition = "2021"
authors = ["Nipe Contributors"]
description = "Route all traffic through Tor network with kill switch protection"
license = "MIT"
repository = "https://github.com/arunkumarkethana/nipe-Tor"

[[bin]]
name = "nipe"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client for Tor checks
reqwest = { version = "0.11", features = ["rustls-tls", "socks", "json"] }

# CLI framework
clap = { version = "4.4", features = ["derive", "cargo"] }
colored = "2.1"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System information
sysinfo = "0.30"
dirs = "5.0"

# Signal handling
ctrlc = "3.4"

# Unix system calls
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.27", features = ["process"] }

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
